# tapestry

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  package-lock.json  package.json  pla  place.ts  pyproject.toml  tap  tap.ts
.github/workflows/: lint.yaml
app/: package.json  tsconfig.json
app/src/: App.tsx  Floater.tsx  Navigation.tsx  Tapestry.tsx  TapestryModal.tsx  UpdateModal.tsx  index.tsx
app/src/tapestry-client/: TapestryProgram.ts  TokenAccountsCache.ts  errors.ts  index.ts  utils.ts
app/webpack/: webpack.dev.js  webpack.prod.js
cli_utils/: commandHelpers.ts  utils.ts
client/: package-lock.json  package.json  tsconfig.json
client/src/: TapestryClient.ts  TapestryProgram.ts  TokenAccountsCache.ts  constants.ts  index.ts  utils.ts
client/src/accounts/: FeaturedState.ts  TapestryPatch.ts  TapestryState.ts
client/src/instructions/: InitTapestry.ts  types.ts
commands/: command.ts  get.ts  keys.ts  run.ts  tx.ts
commands/utils/: commandHelpers.ts  utils.ts
patterns/: chunk_border.json  hello_world.json
place/app/: .babelrc  package.json  tailwind.config.js  tsconfig.json
place/app/public/: bomb.json  index.html  paintbrush.json
place/app/src/: App.tsx  Toolbox.tsx  Wallet.tsx  index.css  index.tsx  navigation.css  pallete.json  toolbox.css
place/app/webpack/: webpack.common.js  webpack.dev.js
place/cli/: bot.ts  get.ts  pallete.ts  tx.ts
place/client/: package.json  tsconfig.json
place/client/src/: Config.ts  Pallete.ts  PlaceClient.ts  PlaceProgram.ts  index.ts  pallete.json
place/program/: Cargo.toml
place/program/.cargo/: config.toml
place/program/src/: config.rs  constants.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
place/program/tests/: integrations.rs
place/res/palletes/: blend32.hex  hept32.hex  mspaintxp.hex  nintendo.hex  pineapple.hex  tnr64.hex
place/watcher/: Cargo.toml
place/watcher/src/: blend32.rs  main.rs
program/: Cargo.toml
program/src/: error.rs  instruction.rs  processor.rs  state.rs  utils.rs
program/tests/: integration.rs
res/patterns/: hello_world.json
res/patterns/checker/: pattern.json
res/patterns/hello/: pattern.json
scripts/: custom_deps.py  deploy.py  download_snapshot.py  fresh_validator.py  helpers.py  init_place.py  make_big_ass_image.py  start_test_validator.py  swarm.py  utils.py
tapestry/app/: tsconfig.json
tapestry/app/src/: App.tsx  Floater.tsx  Navigation.tsx  Notification.tsx  Tapestry.tsx  TapestryModal.tsx  Wallet.tsx  index.css
tapestry/app/webpack/: webpack.common.js  webpack.dev.js  webpack.prod.js
tapestry/cli/: get.ts  img.ts  keys.ts  tx.ts
tapestry/cli/utils/: utils.ts
tapestry/client/src/: TapestryClient.ts  TapestryProgram.ts
tapestry/program/: Cargo.toml
tapestry/timp/: package.json
tapestry_watcher/: Cargo.toml  chain_watcher.py
tapestry_watcher/src/: main.rs
(+44 files in other folders)
