[package]
name = "solana-tapestry"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.9.2"
solana-validator = { version = "1.9.2", optional = true }
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
thiserror = "1.0.24"
arrayref = "0.3.6"
borsh = "0.9.1"

[features]
test-bpf = ["solana-validator"]

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.9.2"
solana-sdk = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]
