[package]
name = "tapestry-watcher"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-shadow = "*"
solana-tapestry = { path = "../program", features= ["no-entrypoint"]}
solana-sdk = "1.8.12"
tokio = "1.15.0"

# [dependencies]
# solana-client = "1.8.12"
# solana-sdk = "1.8.12"
# solana-account-decoder = "1.9.5"
# solana-tapestry = { path = "../program", features= ["no-entrypoint"]}
