[package]
name = "solana-place"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.8.12"
solana-validator = { version = "1.8.12", optional = true }
thiserror = "1.0.24"
arrayref = "0.3.6"
borsh = "0.9.1"

[features]
test-bpf = ["solana-validator"]
no-entrypoint = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.8.12"
solana-sdk = "1.8.12"

[lib]
crate-type = ["cdylib", "lib"]
